Nests show how much energy they have stored